--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.12.1", features = ["file_watcher"] }
 notify = "6.1.1"
-rlua = "0.19.7"
+rlua = { version = "0.19.7", default-features = false, features =  ["system-luajit"] }
 rodio = "0.17.3"
 atomic_float = "0.1.0"
 rtrb = "0.3.0"
