--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install dependencies
+      run: sudo apt-get install libasound2-dev libjack-jackd2-dev libjack-jackd2-0 librust-atk-dev libgtk-3-dev librust-gdk-dev
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
